--- a/apps/gpu-operator/fleet.yaml
+++ b/apps/gpu-operator/fleet.yaml
@@ -6,3 +6,13 @@ helm:
   version: 24.6.1
   valuesFiles:
     - values.yaml
+diff:
+  comparePatches:
+    - apiVersion: nvidia.com/v1
+      kind: ClusterPolicy
+      name: cluster-policy
+      operations:
+        - {
+            "op": "remove",
+            "path": "/spec/dcgmExporter/serviceMonitor/relabelings",
+          }
